tests/elab/fail/naked_expression1.t20
;; Naked string literal at top level.
"Hello World!"
